---------------------------------------------------------------------------------------------------
Version: 1.1.30
  Features:
    - Added Deadlock's Stacking Beltboxes & Compact Loaders combatibility (thanks to Vascar and https://mods.factorio.com/mod/DeadlockStackingForTiberium)
---------------------------------------------------------------------------------------------------
Version: 1.1.29
  Bugfixes:
    - Fixed Space Exploration ignoring our setting and spawning Tiberium in the starting area
    - Fixed broken recipe name for recipes added by Burner Tier Centrifuging setting
    - Fixed Blue Tiberium Slurry not spilling from pipes when destroyed
    - Fixed TCN beacon range being slightly smaller than the displayed range
    - Fixed malformed technologies from other mods causing evaluateFormula crashes
    - Fixed Anti-Tiberium Sonic Emitter, Anti-Blue Tiberium Sonic Emitter, and Tiberium Detonation Charge not being blueprintable
    - Fixed Sonic Repulsor Fields being able to be attacked and destroyed
    - Fully removed old Ion Beam Projector and Tiberium Power Plant entities that were deprecated 2 years ago so they stop popping up
    - Fixed Obelisk of Light attack sound being too quiet and only playing out of the left speaker
    - Fixed not being able to place SRF Emitters in the middle of SRF Fences when using the Space Exploration mod
  Changes:
    - Tiberium mining, acceleration, and containment structures can now be built in space when using the Space Exploration mod
    - Changed default Blue Tiberium appearance timing when Space Exploration is active to account for slow evolution factor growth
    - Liquid Tiberium Power technology made cheaper and now has Nuclear Power as a prerequisite
    - Tiberium Power Plant recipe adjusted to require Steam Turbines instead of Electric Engine Units
    - Rebalanced Tiberium Centifuging recipe times to make lower tiers faster and higher tiers slower (10 10 15 20 -> 4 8 16 32)
  Features: